// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/WizardModal basic wizard modal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--wizard-modal ComposedModal__StyledModal-sc-12pj5f-0 eVCcTg"
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        tabIndex={-1}
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            Basic Wizard
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Gimme 3 Steps
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <ul
            className="iot--progress-indicator"
            data-testid="iot--progress-indicator-testid"
            onChange={[Function]}
          >
            <li
              className="iot--progress-step--current"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step1"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="step1"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      r="10"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      1
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step1"
                  >
                    step1
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step--incomplete"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-step2"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="step2"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      2
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step2"
                  >
                    step2
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step--incomplete"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-step3"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  className="iot--progress-step-icon"
                  title="step3"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step3"
                  >
                    step3
                  </p>
                </div>
              </button>
            </li>
          </ul>
          <div
            className="iot--wizard-modal__content"
          >
            page 1
          </div>
        </div>
        <div
          className="bx--modal-footer ComposedModal__StyledModalFooter-sc-12pj5f-2 ctEQpf"
        >
          <div
            className="iot--wizard-modal__footer WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
          >
            <button
              className="iot--btn bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              className="iot--btn bx--btn bx--btn--primary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/WizardModal custom footer 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--wizard-modal WizardModalstory__StyledWizard-sc-1z46gj-0 eiobyI ComposedModal__StyledModal-sc-12pj5f-0 eVCcTg"
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        tabIndex={-1}
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            Wizard With Custom Footer 
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Gimme 3 Steps
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <ul
            className="iot--progress-indicator"
            data-testid="iot--progress-indicator-testid"
            onChange={[Function]}
          >
            <li
              className="iot--progress-step--current"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step1"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="step1"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      r="10"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      1
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step1"
                  >
                    step1
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step--incomplete"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step2"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="step2"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      2
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step2"
                  >
                    step2
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step--incomplete"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step3"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <span
                  className="iot--progress-step-icon"
                  title="step3"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step3"
                  >
                    step3
                  </p>
                </div>
              </button>
            </li>
          </ul>
          <div
            className="iot--wizard-modal__content"
          >
            page 1
          </div>
        </div>
        <div
          className="bx--modal-footer ComposedModal__StyledModalFooter-sc-12pj5f-2 ctEQpf"
        >
          <div
            className="WizardInline-custom-footer-content"
          >
            <p>
              Custom content
            </p>
          </div>
          <div
            className="iot--wizard-modal__footer WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
          >
            <button
              className="iot--btn bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              I18N Cancel
            </button>
            <button
              className="iot--btn bx--btn bx--btn--primary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              I18N Next
            </button>
          </div>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/WizardModal sending data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal is-visible iot--wizard-modal ComposedModal__StyledModal-sc-12pj5f-0 eVCcTg"
      onBlur={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      open={true}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        className="bx--modal-container"
        tabIndex={-1}
      >
        <div
          className="bx--modal-header"
        >
          <p
            className="bx--modal-header__label bx--type-delta"
          >
            Basic Wizard
          </p>
          <p
            className="bx--modal-header__heading bx--type-beta"
          >
            Gimme 3 Steps
          </p>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-hidden={true}
              className="bx--modal-close__icon"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          className="bx--modal-content"
        >
          <ul
            className="iot--progress-indicator"
            data-testid="iot--progress-indicator-testid"
            onChange={[Function]}
          >
            <li
              className="iot--progress-step--complete"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step1"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <div
                  className="iot--progress-step-line--complete"
                />
                <span
                  className="iot--progress-step-icon"
                  title="step1"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <path
                      d="M14 21.5L9 16.54 10.59 14.97 14 18.35 21.41 11 23 12.58 14 21.5z"
                    />
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step1"
                  >
                    step1
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step--complete"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step2"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <div
                  className="iot--progress-step-line--complete"
                />
                <span
                  className="iot--progress-step-icon"
                  title="step2"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <path
                      d="M14 21.5L9 16.54 10.59 14.97 14 18.35 21.41 11 23 12.58 14 21.5z"
                    />
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step2"
                  >
                    step2
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step--current"
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-step3"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                type="button"
              >
                <span
                  className="iot--progress-step-icon"
                  title="step3"
                >
                  <svg
                    aria-hidden={true}
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      r="10"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    value="step3"
                  >
                    step3
                  </p>
                </div>
              </button>
            </li>
          </ul>
          <div
            className="iot--wizard-modal__content"
          >
            page 3
          </div>
        </div>
        <div
          className="bx--modal-footer ComposedModal__StyledModalFooter-sc-12pj5f-2 ctEQpf"
        >
          <div
            className="iot--wizard-modal__footer WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
          >
            <button
              className="iot--btn bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Previous
            </button>
            <button
              className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
              disabled={true}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              <div
                aria-atomic="true"
                aria-labelledby="loading-id-9"
                aria-live="assertive"
                className="bx--loading bx--loading--small"
              >
                <label
                  className="bx--visually-hidden"
                  id="loading-id-9"
                >
                  Active loading indicator
                </label>
                <svg
                  className="bx--loading__svg"
                  viewBox="-75 -75 150 150"
                >
                  <title>
                    Active loading indicator
                  </title>
                  <circle
                    className="bx--loading__background"
                    cx="0"
                    cy="0"
                    r="26.8125"
                  />
                  <circle
                    className="bx--loading__stroke"
                    cx="0"
                    cy="0"
                    r="26.8125"
                  />
                </svg>
              </div>
              Submit
            </button>
          </div>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
